feat: Add comprehensive tests for error handling, example files, and integration scenarios in Mbare